# Knowledge-Graph-PrimeKg

./: .env.example  .gitignore  Dockerfile  README.md  build_mdc_contraindication.py  docker-compose.yml  dumps.sh  pyproject.toml  query_diagnosis_neighbors.py  requirements.txt  run-prime-kg.sh  setup-neo4j.sh  start-kg.sh  voc_final.pkl
config/: config.py
docs/superpowers/plans/: 2026-05-26-primekg-medical-knowledge-context-enricher.md
docs/superpowers/specs/: 2026-05-26-primekg-medical-knowledge-context-enricher-design.md
documents/: KNOWLEDGE_CONTEXT_QUERIES.md
scripts/: batch_enrich.py  check_neo4j.py  download_data.py  import_flame_ddi_to_neo4j.py  init_database.py  manage_neo4j.sh  query_examples.py  serve_enricher.py
src/: main.py
src/db/: neo4j_connector.py
src/enrichment/: __init__.py  diagnosis_tokens.py  enricher.py  queries.py  schema.py
src/etl/: primekg_loader.py
src/utils/: helpers.py
tests/enrichment/: test_diagnosis_tokens.py  test_enricher.py
